<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/userprofile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/user_achiev"
            android:icon="@drawable/badge"
            android:title="@string/achiev" />

        <item
            android:id="@+id/blood_storage"
            android:icon="@drawable/blood_doner"
            android:title="@string/fndBlood" />
        <item
            android:id="@+id/nearby_hospital"
            android:icon="@drawable/hospital"
            android:title="@string/nearH" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/lgout" />
    </group>

</menu>