<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MakeRequestActivity">


 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent" >


  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/grad"
        app:menu="@menu/search_menu"
        app:navigationIcon="@drawable/baseline_menu_24"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <TextView
      android:padding="18dp"
      android:textSize="24sp"
      android:textStyle="bold"
      android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
      android:text="Upload a Request for Help!"
        android:fontFamily="@font/roboto_regular"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:padding="5dp"
          android:text="Contact:"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <EditText
          android:id="@+id/getMobile"
          android:padding="5dp"
          android:inputType="phone"
          android:hint="@string/mobile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:padding="5dp"
          android:text="Location:"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <EditText
          android:id="@+id/getLocation"
          android:padding="5dp"
          android:inputType="text"
          android:hint="Enter location of place"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:padding="5dp"
          android:text="@string/BloodGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <Spinner
          android:id="@+id/SpinnerBlood"
          android:entries="@array/Blood_Group"
          android:padding="5dp"
          android:inputType="text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:padding="5dp"
          android:text="@string/Division"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      <Spinner
          android:id="@+id/SpinnerDivision"
          android:entries="@array/division_list"
          android:padding="5dp"
          android:inputType="text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </LinearLayout>
    <FrameLayout
      android:layout_margin="8dp"
      android:background="@drawable/border_background"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
      android:id="@+id/message"
      android:textSize="18sp"
      android:minLines="6"
      android:maxLines="10"
      android:hint="Message"
      android:padding="10dp"
      android:cursorVisible="false"
      android:background="@null"
      android:textColorHint="@android:color/black"
      android:gravity="top"
      android:textAlignment="gravity"
      android:textColor="@android:color/black"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    </FrameLayout>

    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/post_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="8dp"
        android:src="@drawable/ic_image_black_24dp" />
      <TextView
        android:id="@+id/choose_text"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text="@string/choose_image"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </LinearLayout>


    <Button
      android:id="@+id/submit_button"
      android:text="Post Request"
      android:textSize="18sp"
      android:background="@drawable/button_bg"
      android:textAllCaps="false"
      android:textStyle="bold"
      android:textColor="@android:color/white"
      android:layout_margin="30dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  </LinearLayout>
</ScrollView>
  <com.google.android.material.navigation.NavigationView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:id="@+id/nav_view"
      android:layout_gravity="start"
      app:headerLayout="@layout/nav_header"
      app:menu="@menu/navigation_menu">
  </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>